added new page with phrases

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <button id="iloveyouBtn">PRESS ME!</button>
         <h1>DO YOU WANNA GO OUT WITH ME?</h1>
         <img src="Pink_kitten.gif" alt="Cute Pink Gif" class="cute-image">
         <div class="buttons">
