--- a/iloveyou.html
+++ b/iloveyou.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <!-- <button id="showImageButton">Show Image</button> -->
-            <img src="IMG_6604.jpg" alt="My favourite photo" class="top-photo" id="hiddenImage">
+            <!-- <img src="IMG_6604.jpg" alt="My favourite photo" class="top-photo" id="hiddenImage">-->
             <h1>  </h1>
             <ul id="iloveyoulist">
                 <li class="phrase-item">Бізді кездестірген Аллаға мың алғыс</li>
