--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Иееееееее!!!</h2>
             <ul id="movieList" class="hidden">
                 <div class="movie-info">
-                    <h3>Кеттік киноға кешке:)</h3>
+                    <h3>any ideas?</h3>
                 </div>
             </ul>
         </div>
