--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
             <h2>Иееееееее!!!</h2>
             <ul id="movieList" class="hidden">
                 <div class="movie-info">
-                    <h3>any ideas?</h3>
+                    <h3><strike style="color: black;">Го конькиға, горька</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3><strike style="color: black;">Кеттік киноға кешке:)</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3><strike style="color: black;">Кішкентай ханымдар:)</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3><strike style="color: black;">Кеттік бәйтерекке:)</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3><strike style="color: black;">Taryga baryp qaitaiq</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3><strike style="color: black;">Karima</strike></h3>
+                </div>
+                <div class="movie-info">
+                    <h3>where do you wanna go?</h3>
                 </div>
             </ul>
         </div>
