--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
     <div class="container">
         <button id="iloveyouBtn">PRESS ME!</button>
+        <button id="iloveyouBtn2">PRESS ME TOO!</button>
+        <button id="calculateLove">Calculate love</button>
+        <button id="importantDatesButton">Important Dates</button>
         <h1>DO YOU WANNA GO OUT WITH ME?</h1>
-        <img src="Pink_kitten.gif" alt="Cute Pink Gif" class="cute-image">
+        <img src="images/Pink_kitten.gif" alt="Cute Pink Gif" class="cute-image">
         <div class="buttons">
             <button id="yesBtn">Yes</button>
             <button id="noBtn">No</button>
         </div>
         <div id="ieeeContainer" class="hidden">
-            <img src="ieee_logo2.gif" alt="IEEE Logo" class="ieee-image">
+            <img src="images/ieee_logo2.gif" alt="IEEE Logo" class="ieee-image">
             <h2>Иееееееее!!!</h2>
             <ul id="movieList" class="hidden">
                 <div class="movie-info">
